--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
             ],
             "styles": [
               "node_modules/ngx-spinner/animations/square-jelly-box.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
