--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^4.18.2",
     "flowbite": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.6",
